# multi-threaded-integral-calculation

./: .clang-format  CMakeLists.txt  LICENSE
include/: consistent.h  function.h  parallel.h  splitting.h
src/: consistent.c  main.c  parallel.c  splitting.c
